[tool.poetry]
name = "list-events"
version = "0.1.0"
description = "List events in ReadyUp"
authors = [
   "ReadyUp Support <support@readyup.com>"
]

[tool.poetry.scripts]
list-events = "list_events:list"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
