[tool.poetry]
name = "create-events"
version = "0.1.0"
description = "Examples of how to use the ReadyUp API"
authors = [
   "ReadyUp Support <support@readyup.com>"
]

[tool.poetry.scripts]
create-events = "create_events:create"
list-events = "list_events:list"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
